--- a/theonefile_verse/public/index.html
+++ b/theonefile_verse/public/index.html
@@ -231,7 +231,7 @@
 
   <div class="container">
     <h1>TheOneFile_Verse</h1>
-    <p class="tagline">There can be only one. Collaborate in realtime.</p>
+    <p class="tagline">It turns out there CAN be more than one.</p>
 
     <div class="actions">
       <button class="btn btn-primary" onclick="openModal('create')">Create Room</button>
