--- a/the-one-file.html
+++ b/the-one-file.html
@@ -1099,6 +1099,7 @@ button:disabled {
 	  }
 	  .modal.active {
 	  display: inline-grid;
+	  touch-action: pan-y;
 	  }
 	  #dialog-modal {
 	  z-index: 9999999;
@@ -1111,6 +1112,9 @@ button:disabled {
 	  border: 1px solid var(--edge-main);
 	  min-width: 300px;
 	  max-width: 90%;
+	  max-height: 85vh;
+	  overflow-y: auto;
+	  overscroll-behavior: contain;
 	  }
       .modal-content h3 {
       margin: 0 0 15px 0;
@@ -1596,11 +1600,14 @@ g[data-node-id]:hover .fov-group {
       padding: 12px;
       display: none;
       flex-direction: column;
-      width: 180px;
+      max-height: calc(100vh - var(--topbar-height));
+      overflow-y: auto;
+      overscroll-behavior: contain;
       z-index: 999;
       }
       #topbar-menu.open {
       display: flex;
+      touch-action: pan-y;
       }
       header {
       position: relative;
@@ -5417,7 +5424,7 @@ html.rtl .lang-string-row { flex-direction: row-reverse; }
         return MODE_DEFAULT_CATEGORIES[PAGE_STATE.mappingMode || 'network'] || 'basic';
       }
 
-      let currentNodeId = "host";
+      let currentNodeId = null;
       let textDrawMode = false;
       let currentEdgeId = null;
       let currentStyleScope = "all";
@@ -13855,6 +13862,7 @@ document.getElementById("fov-speed").oninput = function() {
           document.getElementById("image-panel").style.display = "none";
         }
         forgeTheTopology();
+        updateTopologyToolbarVisibility();
       }
 	  if (isViewOnly()) {
          document.body.classList.remove("view-only-inspect");
@@ -13909,6 +13917,7 @@ document.getElementById("fov-speed").oninput = function() {
           document.getElementById("image-panel").style.display = "none";
         }
         forgeTheTopology();
+        updateTopologyToolbarVisibility();
       }
          if (e.touches.length === 1) {
            e.preventDefault();
@@ -16097,6 +16106,7 @@ document.querySelectorAll('#settings-modal .style-content input, #settings-modal
          document.getElementById("edge-panel").style.display = "none";
          document.getElementById("topology-toolbar").style.display = "none";
         }
+        updateDrawToolbarVisibility();
         showAlert(t("dialogs.jsonImportSuccess", { nodeCount, edgeCount, rectCount, textCount }));
         e.target.value = "";
        } catch (err) {
@@ -17716,6 +17726,8 @@ fovEnabled: source.fovEnabled || false,
         document.getElementById("rect-panel").style.display = "none";
         document.getElementById("image-panel").style.display = "none";
         displayTabs();
+        updateDrawToolbarVisibility();
+        updateTopologyToolbarVisibility();
         logAuditEvent("tab", `Switched to tab: ${newTab.name}`);
         const hasData = Object.keys(NODE_DATA).length > 0 || EDGE_DATA.list.length > 0;
         const hasPageState = newTab.pageState !== null && newTab.pageState !== undefined;
@@ -19632,6 +19644,8 @@ function showFormatHelp() {
       forgeTheTopology();
       if (typeof forgeTheLegend === 'function') forgeTheLegend();
       updateViewBox();
+      updateDrawToolbarVisibility();
+      updateTopologyToolbarVisibility();
       logAuditEvent('import', `Imported CSV (full restore): ${file.name}`);
       showAlert(t("dialogs.fullRestoreComplete"));
       return;
@@ -19679,6 +19693,8 @@ function showFormatHelp() {
 		});
 		forgeTheTopology();
 		updateViewBox();
+		updateDrawToolbarVisibility();
+		updateTopologyToolbarVisibility();
 		logAuditEvent('import', `Imported CSV: ${file.name} (${nodes.length} nodes)`);
 		showAlert(t("dialogs.importedNodesCount", { count: nodes.length }));
 	  } catch (err) {
@@ -20027,6 +20043,8 @@ function showFormatHelp() {
     forgeTheTopology();
     if (typeof forgeTheLegend === 'function') forgeTheLegend();
     updateViewBox();
+    updateDrawToolbarVisibility();
+    updateTopologyToolbarVisibility();
     logAuditEvent('import', `Imported Markdown: ${file.name} (${nodeCount} nodes, ${edgeCount} connections)`);
     showAlert(t("dialogs.markdownImportSuccess", { nodeCount, edgeCount, rectCount, textCount }));
      } catch (err) {
@@ -20149,6 +20167,7 @@ function showFormatHelp() {
 		  document.getElementById("image-panel").style.display = "none";
 		  document.getElementById("topology-toolbar").style.display = "none";
 		}
+		updateDrawToolbarVisibility();
 		showAlert(t("dialogs.htmlImportSuccess", { nodeCount, edgeCount }));
 	  } catch (err) {
 		console.error("HTML import error:", err);
